[package]
name = "evnt"
authors = ["Jan Gronowski <jangronowski@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
assert_fs = "1.0"